// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeedbackContent /> should match snapshot for negative 1`] = `
<div>
  <h2
    class="fr-h5"
  >
    Merci pour votre réponse.
  </h2>
  <fieldset
    aria-labelledby="fr-fieldset-checkbox-:r2:-legend fr-fieldset-checkbox-:r2:-messages"
    class="fr-fieldset"
    id="fr-fieldset-checkbox-:r2:"
  >
    <legend
      class="fr-fieldset__legend fr-text--regular"
      id="fr-fieldset-checkbox-:r2:-legend"
    >
      Pouvez-vous nous en dire plus ?
    </legend>
    <div
      class="fr-fieldset__content"
    >
      <div
        class="fr-checkbox-group"
      >
        <input
          id="fr-fieldset-checkbox-:r2:-0"
          name="unclear"
          type="checkbox"
          value="unclear"
        />
        <label
          class="fr-label"
          for="fr-fieldset-checkbox-:r2:-0"
        >
          Les informations ne sont pas claires
        </label>
      </div>
      <div
        class="fr-checkbox-group"
      >
        <input
          id="fr-fieldset-checkbox-:r2:-1"
          name="unrelated"
          type="checkbox"
          value="unrelated"
        />
        <label
          class="fr-label"
          for="fr-fieldset-checkbox-:r2:-1"
        >
          Cette page ne correspond pas à ma recherche ou à ma situation.
        </label>
      </div>
      <div
        class="fr-checkbox-group"
      >
        <input
          id="fr-fieldset-checkbox-:r2:-2"
          name="unsatisfied"
          type="checkbox"
          value="unsatisfied"
        />
        <label
          class="fr-label"
          for="fr-fieldset-checkbox-:r2:-2"
        >
          Je ne suis pas satisfait de cette réglementation.
        </label>
      </div>
      <div
        class="fr-checkbox-group"
      >
        <input
          id="fr-fieldset-checkbox-:r2:-3"
          name="wrong"
          type="checkbox"
          value="wrong"
        />
        <label
          class="fr-label"
          for="fr-fieldset-checkbox-:r2:-3"
        >
          Les informations me semblent fausses.
        </label>
      </div>
    </div>
    <div
      aria-live="assertive"
      class="fr-messages-group"
      id="fr-fieldset-checkbox-:r2:-messages"
    >
      <p
        class="fr-message"
      />
    </div>
  </fieldset>
  <div
    class="fr-input-group"
  >
    <label
      class="fr-label"
      for="input-:r4:"
    >
      Faire une suggestion pour améliorer cette page
    </label>
    <textarea
      class="fr-input"
      id="input-:r4:"
    />
    <div
      aria-live="polite"
      class="fr-messages-group"
      id="input-:r4:-messages-group"
    />
  </div>
  <p
    aria-atomic="true"
    aria-live="off"
    class="fr-info-text fr-mt-0 fr-mb-3w"
    data-testid="characterInfo"
  >
    500 caractères restants
  </p>
  <button
    class="fr-btn fr-btn--secondary"
    id="fr-button-:r5:"
    type="button"
  >
    Envoyer
  </button>
</div>
`;

exports[`<FeedbackContent /> should match snapshot for positive 1`] = `
<div>
  <h2
    class="fr-h5"
  >
    Merci pour votre réponse.
  </h2>
  <div
    class="fr-input-group"
  >
    <label
      class="fr-label"
      for="input-:r0:"
    >
      Faire une suggestion pour améliorer cette page
    </label>
    <textarea
      class="fr-input"
      id="input-:r0:"
    />
    <div
      aria-live="polite"
      class="fr-messages-group"
      id="input-:r0:-messages-group"
    />
  </div>
  <p
    aria-atomic="true"
    aria-live="off"
    class="fr-info-text fr-mt-0 fr-mb-3w"
    data-testid="characterInfo"
  >
    500 caractères restants
  </p>
  <button
    class="fr-btn fr-btn--secondary"
    id="fr-button-:r1:"
    type="button"
  >
    Envoyer
  </button>
</div>
`;
